Update trainer XL and implemented uv as package installer

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Fix_Lora_Trainer_XL.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -356,7 +356,7 @@
         "kohya_dir = os.path.join(trainer_dir, \"sd_scripts\")\n",
         "\n",
         "venv_python = os.path.join(kohya_dir, \"venv/bin/python\")\n",
-        "venv_pip = os.path.join(kohya_dir, \"venv/bin/pip\")\n",
+        "#venv_pip = os.path.join(kohya_dir, \"venv/bin/pip\")\n",
         "train_network = os.path.join(kohya_dir, \"sdxl_train_network.py\")\n",
         "\n",
         "if \"/Loras\" in folder_structure:\n",
@@ -381,18 +381,21 @@
         "    installed = True\n",
         "\n",
         "  !apt -y update -qq\n",
-        "  !apt install -y python3.10-venv aria2 -qq\n",
-        "  !git clone https://github.com/derrian-distro/LoRA_Easy_Training_scripts_Backend {trainer_dir}\n",
+        "  !apt install -y aria2 -qq\n",
+        "  \n",
+        "  #Uv package manager add-on\n",
+        "  !git clone https://github.com/ZeroProtecPlus/LoRA_Easy_Training_scripts_Backend {trainer_dir}\n",
         "  os.chdir(trainer_dir)\n",
-        "  !git reset --hard {COMMIT}\n",
+        "  #!git reset --hard {COMMIT}\n",
+        "\n",
         "  from IPython.display import display, HTML\n",
-        "  display(HTML(\"<h2 style='color: yellow;'>Descargando dependencias ¡¡esto puede tardar hasta 6 minutos!!...</h2>\"))\n",
+        "  display(HTML(\"<h2 style='color: yellow;'>Descargando dependencias</h2>\"))\n",
         "  !chmod 755 ./colab_install.sh\n",
         "  !./colab_install.sh > install_log.txt 2>&1\n",
         "  clear_output()\n",
         "\n",
         "  # fix logging\n",
-        "  !{venv_pip} uninstall -y rich\n",
+        "  !uv pip uninstall --python {venv_python} -- y rich\n",
         "\n",
         "  # patch kohya\n",
         "  os.chdir(kohya_dir)\n",
@@ -911,15 +914,21 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Extras"
-      ],
       "metadata": {
         "id": "zci9GW_i831B"
-      }
+      },
+      "source": [
+        "##Extras"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "cellView": "form",
+        "id": "ZIL7itnNaw5V"
+      },
+      "outputs": [],
       "source": [
         "#@markdown ## Colab Activo en el celular 📳\n",
         "#@markdown Ejecuta esta celda para mantener viva la pestaña en el celular (antes de ejecutar la celda de inicio) <p>\n",
@@ -927,13 +936,7 @@
         "%%html\n",
         "<b>Pulsa play en el reproductor de música para mantener viva la pestaña antes de ejecutar la celda de inicio (sólo utiliza 13 MB de datos).</b><br/>\n",
         "<audio src=\"https://raw.githubusercontent.com/KoboldAI/KoboldAI-Client/main/colab/silence.m4a\" controls>"
-      ],
-      "metadata": {
-        "id": "ZIL7itnNaw5V",
-        "cellView": "form"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -1031,12 +1034,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Iniciar sesión y crear repositorio en huggingFace 🤗"
-      ],
       "metadata": {
         "id": "R3lcQFnR7bwa"
-      }
+      },
+      "source": [
+        "## Iniciar sesión y crear repositorio en huggingFace 🤗"
+      ]
     },
     {
       "cell_type": "code",
@@ -1105,12 +1108,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "##Subir a huggingface_hub (Lora y dataset) 🤗"
-      ],
       "metadata": {
         "id": "OFFNDwd87L_4"
-      }
+      },
+      "source": [
+        "##Subir a huggingface_hub (Lora y dataset) 🤗"
+      ]
     },
     {
       "cell_type": "code",
@@ -1237,8 +1240,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
