feat: update trainer installation source

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -70,7 +70,7 @@
         "#@markdown ### 💤 Auto Off\n",
         "\n",
         "#@markdown *Si esta opción está marcada, el entorno se desconectará automáticamente una vez finalice el entrenamiento.*\n",
-        "auto_off   = True  # @param {type: \"boolean\"}\n",
+        "auto_off   = False  # @param {type: \"boolean\"}\n",
         "if auto_off:\n",
         "    print(\"\\033[96mAuto Off encendido\\033[0m\")\n",
         "if not auto_off:\n",
@@ -96,7 +96,7 @@
         "if \"override_config_file\" not in globals():\n",
         "  override_config_file = None\n",
         "\n",
-        "COMMIT = \"47ef6ed843ee1951cd07838c5fdcca60c954130c\"\n",
+        "COMMIT = \"fa2427c6b468231e8e270e40fe72add780118dbe\"\n",
         "LOWRAM = True\n",
         "LOAD_TRUNCATED_IMAGES = True\n",
         "BETTER_EPOCH_NAMES = True\n",
@@ -107,7 +107,7 @@
         "\n",
         "#@markdown ### ▶️ Setup\n",
         "#@markdown El nombre de tu proyecto será el mismo que el de la carpeta que contiene tus imágenes. No se permiten espacios, puedes usar `guión bajo` si el nombre es muy largo.\n",
-        "project_name = \"\" #@param {type:\"string\"}\n",
+        "project_name = \"archi-archnai-style\" #@param {type:\"string\"}\n",
         "project_name = project_name.strip()\n",
         "#@markdown La estructura de carpetas no importa y es puramente por comodidad. Asegúrate de elegir siempre el mismo.  Me gusta organizar por proyecto.\n",
         "folder_structure = \"Organize by project (MyDrive/Loras/project_name/dataset)\" #@param [\"Organize by category (MyDrive/lora_training/datasets/project_name)\", \"Organize by project (MyDrive/Loras/project_name/dataset)\"]\n",
@@ -199,28 +199,28 @@
         "\n",
         "#@markdown ### ▶️ Processing\n",
         "#@markdown Por defecto la resolución para personajes es 1024. otras resoluciones que puedes usar son 896 (recomendado para personajes o 1024) y 768 (recomendado para estilos, puedes usar más repeticiones con esta resolución).\n",
-        "resolution = 1024 #@param {type:\"dropdown\", min:768, max:1536, step:128}\n",
+        "resolution = 768 #@param {type:\"dropdown\", min:768, max:1536, step:128}\n",
         "#@markdown Activa `Flip Aug`si tu dataset es pequeño, util en personajes isometricos, volteara todas tus imagenes (modo espejo) para aprender el doble, pero podria afectar a personajes con tatuajes, marcas, cicatrices etc...\n",
         "flip_aug = False #@param {type:\"boolean\"}\n",
         "caption_extension = \".txt\" # @param [\".txt\",\".caption\"]\n",
         "#@markdown Mezcla etiquetas de anime, mejora el aprendizaje y las indicaciones.  Una etiqueta de activación va al comienzo de cada archivo de texto y no se mezclará.<p>\n",
-        "shuffle_tags = True #@param {type:\"boolean\"}\n",
+        "shuffle_tags = False #@param {type:\"boolean\"}\n",
         "shuffle_caption = shuffle_tags\n",
-        "activation_tags = \"1\" #@param [0,1,2,3]\n",
+        "activation_tags = \"0\" #@param [0,1,2,3]\n",
         "keep_tokens = int(activation_tags)\n",
         "\n",
         "#@markdown ### ▶️ Steps <p>\n",
         "#@markdown Tus imágenes se repetirán esta cantidad de veces durante el entrenamiento. Te recomiendo que tus imágenes multiplicadas por sus repeticiones esté entre 200 y 400.\n",
-        "num_repeats = 2 #@param {type:\"number\"}\n",
+        "num_repeats = 1 #@param {type:\"number\"}\n",
         "#@markdown Elige cuánto tiempo quieres entrenar.  Un buen punto de partida es alrededor de 10 épocas o alrededor de 2000 pasos.<p>\n",
         "#@markdown Una época es una cantidad de pasos igual a: la cantidad de imágenes multiplicada por sus repeticiones, dividida por el tamaño del lote. <p>\n",
         "preferred_unit = \"Epochs\" #@param [\"Epochs\", \"Steps\"]\n",
-        "how_many = 10 #@param {type:\"number\"}\n",
+        "how_many = 15 #@param {type:\"number\"}\n",
         "max_train_epochs = how_many if preferred_unit == \"Epochs\" else None\n",
         "max_train_steps = how_many if preferred_unit == \"Steps\" else None\n",
         "#@markdown Guardar más épocas te permitirá comparar mejor el progreso de tu Lora.\n",
         "save_every_n_epochs = 1 #@param {type:\"number\"}\n",
-        "keep_only_last_n_epochs = 10 #@param {type:\"number\"}\n",
+        "keep_only_last_n_epochs = 5 #@param {type:\"number\"}\n",
         "if not save_every_n_epochs:\n",
         "  save_every_n_epochs = max_train_epochs\n",
         "if not keep_only_last_n_epochs:\n",
@@ -230,13 +230,13 @@
         "#@markdown La tasa de aprendizaje es lo más importante para tus resultados. Si quieres entrenar más lento con muchas imágenes, o si tu dim y alfa son altos, mueve el unet a 2e-4 o menos.  <p>\n",
         "#@markdown El codificador de texto ayuda al Lora a aprender conceptos un poco mejor.  Se recomienda hacerlo la mitad o una quinta parte del unet.  Si estás entrenando un estilo, puedes incluso configurarlo en 0.\n",
         "unet_lr = 3e-4 #@param {type:\"number\"}\n",
-        "text_encoder_lr = 6e-5 #@param {type:\"number\"}\n",
+        "text_encoder_lr = 0 #@param {type:\"number\"}\n",
         "#@markdown El scheduler es el algoritmo que guía la tasa de aprendizaje. Si no está seguro, elije \"constant\" e ignore el número. Personalmente recomiendo `cosine_with_restarts` con 3 reinicios.\n",
-        "lr_scheduler = \"constant_with_warmup\" # @param [\"constant\",\"cosine\",\"cosine_with_restarts\",\"constant_with_warmup\",\"linear\",\"polynomial\",\"rex\"]\n",
-        "lr_scheduler_number = 0 #@param {type:\"number\"}\n",
+        "lr_scheduler = \"constant\" # @param [\"constant\",\"cosine\",\"cosine_with_restarts\",\"constant_with_warmup\",\"linear\",\"polynomial\",\"rex\"]\n",
+        "lr_scheduler_number = 1 #@param {type:\"number\"}\n",
         "#@markdown Pasos dedicados a \"calentar\" la tasa de aprendizaje durante la capacitación para lograr eficiencia. Recomiendo dejarlo al 5%.\n",
         "lr_warmup_ratio = 0.05 #@param {type:\"slider\", min:0.0, max:0.2, step:0.01}\n",
-        "lr_warmup_steps = 100 #@param {type:\"number\"}\n",
+        "lr_warmup_steps = 0 #@param {type:\"number\"}\n",
         "#@markdown Estas configuraciones pueden producir mejores resultados.`min_snr_gamma` ajusta la pérdida con el tiempo. `ip_noise_gamma` ajusta el ruido aleatorio.\n",
         "min_snr_gamma_enabled = True #@param {type:\"boolean\"}\n",
         "min_snr_gamma = 8.0 #@param {type:\"slider\", min:4, max:16.0, step:0.5}\n",
@@ -247,7 +247,7 @@
         "\n",
         "#@markdown ### ▶️ Structure\n",
         "#@markdown LoRA es del tipo clásico y bueno para una variedad de propósitos. LoCon es bueno con los estilos artísticos (también funciona con personajes) ya que tiene más capas para aprender más aspectos del conjunto de datos.\n",
-        "lora_type = \"LoRA\" # @param [\"LoRA\",\"LoCon\"]\n",
+        "lora_type = \"LoCon\" # @param [\"LoRA\",\"LoCon\"]\n",
         "\n",
         "#@markdown A continuación se muestran algunos valores XL recomendados para las siguientes configuraciones:\n",
         "\n",
@@ -275,7 +275,7 @@
         "#@markdown El batch size de 4 es el predeterminado pero puedes incrementarlo incluso a 8 usando una resolución baja (768).\n",
         "#@markdown\n",
         "#@markdown Un tamaño de lote más alto suele ser más rápido pero utiliza más memoria.\n",
-        "train_batch_size = 4 #@param {type:\"slider\", min:1, max:16, step:1}\n",
+        "train_batch_size = 2 #@param {type:\"slider\", min:1, max:16, step:1}\n",
         "#@markdown xformers funciona mejor que sdpa con los nuevos scrips.\n",
         "cross_attention = \"xformers\" #@param [\"sdpa\", \"xformers\"]\n",
         "#@markdown Utilice `full fp16` para el uso mínimo de memoria. <p>\n",
@@ -297,7 +297,7 @@
         "\n",
         "#@markdown ### ▶️ Advanced\n",
         "#@markdown El optimizador es el algoritmo utilizado para el entrenamiento. Adafactor es el predeterminado y funciona muy bien, mientras que el Prodigy administra la tasa de aprendizaje automáticamente y puede tener varias ventajas, como entrenar más rápido, debido a que necesita menos pasos y funcionan mejor para datasets pequeños.\n",
-        "optimizer = \"AdaFactor\" #@param [\"AdamW8bit\", \"Prodigy\", \"DAdaptation\", \"DadaptAdam\", \"DadaptLion\", \"AdamW\", \"Lion\", \"SGDNesterov\", \"SGDNesterov8bit\", \"AdaFactor\", \"Came\"]\n",
+        "optimizer = \"Came\" #@param [\"AdamW8bit\", \"Prodigy\", \"DAdaptation\", \"DadaptAdam\", \"DadaptLion\", \"AdamW\", \"Lion\", \"SGDNesterov\", \"SGDNesterov8bit\", \"AdaFactor\", \"Came\"]\n",
         "#@markdown Argumentos recomendados para Adafactor: `scale_parameter=False relative_step=False warmup_init=False` <p>\n",
         "#@markdown Argumentos recomendados para AdamW8bit: `weight_decay=0.1 betas=[0.9,0.99]`<p>\n",
         "#@markdown Argumentos recomendados para Prodigy: `decouple=True weight_decay=0.01 betas=[0.9,0.999] d_coef=2 use_bias_correction=True safeguard_warmup=True`<p>\n",
@@ -307,7 +307,7 @@
         "#@markdown Si selecciona Prodigy o Dadapt recomiendo usar `mixed fp16`para mejores resultados. <p>\n",
         "recommended_values = True #@param {type:\"boolean\"}\n",
         "#@markdown Alternativamente, establezca sus propios argumentos de optimizador separados por espacios (no comas). `recommended_values` debe estar deshabilitado.\n",
-        "optimizer_args = \"\" #@param {type:\"string\"}\n",
+        "optimizer_args = \" weight_decay=0.04\" #@param {type:\"string\"}\n",
         "optimizer_args = [a.strip() for a in optimizer_args.split(' ') if a]\n",
         "\n",
         "\n",
@@ -382,16 +382,16 @@
         "\n",
         "  !apt -y update -qq\n",
         "  !apt install -y aria2 -qq\n",
-        "  \n",
-        "  #Uv package manager add-on\n",
-        "  !git clone https://github.com/ZeroProtecPlus/LoRA_Easy_Training_scripts_Backend {trainer_dir}\n",
+        "\n",
+        "  #Uv package manager add-on ZeroProtecPlus\n",
+        "  !git clone -b dev https://github.com/ZeroProtecPlus/LoRA_Easy_Training_scripts_Backend {trainer_dir} \n",
         "  os.chdir(trainer_dir)\n",
         "  #!git reset --hard {COMMIT}\n",
         "\n",
         "  from IPython.display import display, HTML\n",
         "  display(HTML(\"<h2 style='color: yellow;'>Descargando dependencias</h2>\"))\n",
         "  !chmod 755 ./colab_install.sh\n",
-        "  !./colab_install.sh > install_log.txt 2>&1\n",
+        "  !./colab_install.sh> install_log.txt 2>&1\n",
         "  clear_output()\n",
         "\n",
         "  # fix logging\n",
@@ -826,7 +826,7 @@
         "    time.sleep(30)\n",
         "    runtime.unassign()\n",
         "else:\n",
-        "    print(\"\\033[96mAuto off está desactivado, el entorno no se desconectará\\033[0m\")\n"
+        "    print(\"\\033[96mAuto off está desactivado, el entorno no se desconectará\\033[0m\")"
       ]
     },
     {
