style: default values

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -70,7 +70,7 @@
         "#@markdown ### 💤 Auto Off\n",
         "\n",
         "#@markdown *Si esta opción está marcada, el entorno se desconectará automáticamente una vez finalice el entrenamiento.*\n",
-        "auto_off   = False  # @param {type: \"boolean\"}\n",
+        "auto_off   = True  # @param {type: \"boolean\"}\n",
         "if auto_off:\n",
         "    print(\"\\033[96mAuto Off encendido\\033[0m\")\n",
         "if not auto_off:\n",
@@ -107,7 +107,7 @@
         "\n",
         "#@markdown ### ▶️ Setup\n",
         "#@markdown El nombre de tu proyecto será el mismo que el de la carpeta que contiene tus imágenes. No se permiten espacios, puedes usar `guión bajo` si el nombre es muy largo.\n",
-        "project_name = \"archi-archnai-style\" #@param {type:\"string\"}\n",
+        "project_name = \"\" #@param {type:\"string\"}\n",
         "project_name = project_name.strip()\n",
         "#@markdown La estructura de carpetas no importa y es puramente por comodidad. Asegúrate de elegir siempre el mismo.  Me gusta organizar por proyecto.\n",
         "folder_structure = \"Organize by project (MyDrive/Loras/project_name/dataset)\" #@param [\"Organize by category (MyDrive/lora_training/datasets/project_name)\", \"Organize by project (MyDrive/Loras/project_name/dataset)\"]\n",
