fix: clear output console

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -392,7 +392,7 @@
         "  display(HTML(\"<h2 style='color: yellow;'>Descargando dependencias</h2>\"))\n",
         "  !chmod 755 ./colab_install.sh\n",
         "  !./colab_install.sh> install_log.txt 2>&1\n",
-        "  clear_output()\n",
+        "  #clear_output()\n",
         "\n",
         "  # fix logging\n",
         "  !uv pip uninstall --python {venv_python} -- y rich\n",
