--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -380,9 +380,10 @@
         "    !wget https://github.com/camenduru/gperftools/releases/download/v1.0/libtcmalloc_minimal.so.4 -O /content/libtcmalloc_minimal.so.4\n",
         "    installed = True\n",
         "\n",
-        "  !apt -y update -qq\n",
-        "  !apt install -y aria2 -qq\n",
-        "\n",
+        "  #!apt -y update -qq\n",
+        "  #!apt install -y aria2 -qq\n",
+        "  !uv pip install aria2 --no-progress\n",
+        "  \n",
         "  #Uv package manager add-on ZeroProtecPlus\n",
         "  !git clone -b dev https://github.com/ZeroProtecPlus/LoRA_Easy_Training_scripts_Backend {trainer_dir} \n",
         "  os.chdir(trainer_dir)\n",
