--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -57,13 +57,10 @@
       },
       "outputs": [],
       "source": [
-        "import os\n",
-        "import re\n",
-        "import toml\n",
+        "import os, re, toml\n",
         "from time import time\n",
         "import time\n",
-        "from IPython.display import Markdown, display\n",
-        "from IPython.display import clear_output\n",
+        "from IPython.display import Markdown, display, HTML, clear_output\n",
         "\n",
         "\n",
         "#auto off\n",
@@ -211,7 +208,7 @@
         "\n",
         "#@markdown ### ▶️ Steps <p>\n",
         "#@markdown Tus imágenes se repetirán esta cantidad de veces durante el entrenamiento. Te recomiendo que tus imágenes multiplicadas por sus repeticiones esté entre 200 y 400.\n",
-        "num_repeats = 1 #@param {type:\"number\"}\n",
+        "num_repeats = 2 #@param {type:\"number\"}\n",
         "#@markdown Elige cuánto tiempo quieres entrenar.  Un buen punto de partida es alrededor de 10 épocas o alrededor de 2000 pasos.<p>\n",
         "#@markdown Una época es una cantidad de pasos igual a: la cantidad de imágenes multiplicada por sus repeticiones, dividida por el tamaño del lote. <p>\n",
         "preferred_unit = \"Epochs\" #@param [\"Epochs\", \"Steps\"]\n",
@@ -229,10 +226,10 @@
         "#@markdown ### ▶️ Learning\n",
         "#@markdown La tasa de aprendizaje es lo más importante para tus resultados. Si quieres entrenar más lento con muchas imágenes, o si tu dim y alfa son altos, mueve el unet a 2e-4 o menos.  <p>\n",
         "#@markdown El codificador de texto ayuda al Lora a aprender conceptos un poco mejor.  Se recomienda hacerlo la mitad o una quinta parte del unet.  Si estás entrenando un estilo, puedes incluso configurarlo en 0.\n",
-        "unet_lr = 3e-4 #@param {type:\"number\"}\n",
+        "unet_lr = 2e-5 #@param {type:\"number\"}\n",
         "text_encoder_lr = 0 #@param {type:\"number\"}\n",
         "#@markdown El scheduler es el algoritmo que guía la tasa de aprendizaje. Si no está seguro, elije \"constant\" e ignore el número. Personalmente recomiendo `cosine_with_restarts` con 3 reinicios.\n",
-        "lr_scheduler = \"constant\" # @param [\"constant\",\"cosine\",\"cosine_with_restarts\",\"constant_with_warmup\",\"linear\",\"polynomial\",\"rex\"]\n",
+        "lr_scheduler = \"rex\" # @param [\"constant\",\"cosine\",\"cosine_with_restarts\",\"constant_with_warmup\",\"linear\",\"polynomial\",\"rex\"]\n",
         "lr_scheduler_number = 1 #@param {type:\"number\"}\n",
         "#@markdown Pasos dedicados a \"calentar\" la tasa de aprendizaje durante la capacitación para lograr eficiencia. Recomiendo dejarlo al 5%.\n",
         "lr_warmup_ratio = 0.05 #@param {type:\"slider\", min:0.0, max:0.2, step:0.01}\n",
@@ -243,11 +240,11 @@
         "ip_noise_gamma_enabled = True #@param {type:\"boolean\"}\n",
         "ip_noise_gamma = 0.05 #@param {type:\"slider\", min:0.05, max:0.1, step:0.01}\n",
         "#@markdown Multinoise puede ayudar con el equilibrio del color (negros más oscuros, blancos más claros) no es necesario activarlo si entrenas Lora Vpred.\n",
-        "multinoise = False #@param {type:\"boolean\"}\n",
+        "multinoise = True #@param {type:\"boolean\"}\n",
         "\n",
         "#@markdown ### ▶️ Structure\n",
         "#@markdown LoRA es del tipo clásico y bueno para una variedad de propósitos. LoCon es bueno con los estilos artísticos (también funciona con personajes) ya que tiene más capas para aprender más aspectos del conjunto de datos.\n",
-        "lora_type = \"LoCon\" # @param [\"LoRA\",\"LoCon\"]\n",
+        "lora_type = \"LoRA\" # @param [\"LoRA\",\"LoCon\"]\n",
         "\n",
         "#@markdown A continuación se muestran algunos valores XL recomendados para las siguientes configuraciones:\n",
         "\n",
@@ -275,7 +272,7 @@
         "#@markdown El batch size de 4 es el predeterminado pero puedes incrementarlo incluso a 8 usando una resolución baja (768).\n",
         "#@markdown\n",
         "#@markdown Un tamaño de lote más alto suele ser más rápido pero utiliza más memoria.\n",
-        "train_batch_size = 2 #@param {type:\"slider\", min:1, max:16, step:1}\n",
+        "train_batch_size = 4 #@param {type:\"slider\", min:1, max:16, step:1}\n",
         "#@markdown xformers funciona mejor que sdpa con los nuevos scrips.\n",
         "cross_attention = \"xformers\" #@param [\"sdpa\", \"xformers\"]\n",
         "#@markdown Utilice `full fp16` para el uso mínimo de memoria. <p>\n",
@@ -307,7 +304,7 @@
         "#@markdown Si selecciona Prodigy o Dadapt recomiendo usar `mixed fp16`para mejores resultados. <p>\n",
         "recommended_values = True #@param {type:\"boolean\"}\n",
         "#@markdown Alternativamente, establezca sus propios argumentos de optimizador separados por espacios (no comas). `recommended_values` debe estar deshabilitado.\n",
-        "optimizer_args = \" weight_decay=0.04\" #@param {type:\"string\"}\n",
+        "optimizer_args = \"weight_decay=0.04\" #@param {type:\"string\"}\n",
         "optimizer_args = [a.strip() for a in optimizer_args.split(' ') if a]\n",
         "\n",
         "\n",
@@ -380,23 +377,18 @@
         "    !wget https://github.com/camenduru/gperftools/releases/download/v1.0/libtcmalloc_minimal.so.4 -O /content/libtcmalloc_minimal.so.4\n",
         "    installed = True\n",
         "\n",
-        "  #!apt -y update -qq\n",
-        "  #!apt install -y aria2 -qq\n",
-        "  !uv pip install aria2 --no-progress\n",
-        "  \n",
+        "  #!uv pip install aria2 --no-progress\n",
+        "\n",
         "  #Uv package manager add-on ZeroProtecPlus\n",
-        "  !git clone -b dev https://github.com/ZeroProtecPlus/LoRA_Easy_Training_scripts_Backend {trainer_dir} \n",
+        "  !git clone -b dev https://github.com/ZeroProtecPlus/LoRA_Easy_Training_scripts_Backend {trainer_dir}\n",
         "  os.chdir(trainer_dir)\n",
         "  #!git reset --hard {COMMIT}\n",
         "\n",
-        "  from IPython.display import display, HTML\n",
-        "  display(HTML(\"<h2 style='color: yellow;'>Descargando dependencias</h2>\"))\n",
+        "  display(HTML(\"<h2 style='color: yellow;'>⬇️ Descargando dependencias</h2>\"))\n",
         "  !chmod 755 ./colab_install.sh\n",
         "  !./colab_install.sh> install_log.txt 2>&1\n",
         "  #clear_output()\n",
         "\n",
-        "  # fix logging\n",
-        "  !uv pip uninstall --python {venv_python} -- y rich\n",
         "\n",
         "  # patch kohya\n",
         "  os.chdir(kohya_dir)\n",
@@ -597,7 +589,7 @@
         "        \"resolution\": resolution,\n",
         "        \"shuffle_caption\": shuffle_caption and not cache_text_encoder_outputs,\n",
         "        \"keep_tokens\": keep_tokens,\n",
-        "        \"flip_aug\": False,\n",
+        "        \"flip_aug\": flip_aug,\n",
         "        \"caption_extension\": caption_extension,\n",
         "        \"enable_bucket\": True,\n",
         "        \"bucket_no_upscale\": False,\n",
