update: code optimization

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Fix_Lora_Trainer_XL.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -377,28 +377,15 @@
         "    !wget https://github.com/camenduru/gperftools/releases/download/v1.0/libtcmalloc_minimal.so.4 -O /content/libtcmalloc_minimal.so.4\n",
         "    installed = True\n",
         "\n",
-<<<<<<< HEAD
-        "  #!apt -y update -qq\n",
-
-        "  #!apt install -y aria2 -qq\n",
-        "  !uv pip install aria2 --no-progress\n",
-        "\n",
-        "  #Uv package manager add-on ZeroProtecPlus\n",
-        "  !git clone -b dev https://github.com/ZeroProtecPlus/LoRA_Easy_Training_scripts_Backend {trainer_dir}\n",
-=======
-        "  #!uv pip install aria2 --no-progress\n",
-        "\n",
         "  #Uv package manager add-on ZeroProtecPlus\n",
         "  !git clone -b testing https://github.com/ZeroProtecPlus/LoRA_Easy_Training_scripts_Backend {trainer_dir}\n",
->>>>>>> dev
         "  os.chdir(trainer_dir)\n",
         "  #!git reset --hard {COMMIT}\n",
         "\n",
-        "  display(HTML(\"<h2 style='color: yellow;'>⬇️ Descargando dependencias</h2>\"))\n",
+        "  display(HTML(\"<h2 style='color: yellow;'>Descargando dependencias</h2>\"))\n",
         "  !chmod 755 ./colab_install.sh\n",
         "  !./colab_install.sh> install_log.txt 2>&1\n",
         "  #clear_output()\n",
-        "\n",
         "\n",
         "  # patch kohya\n",
         "  os.chdir(kohya_dir)\n",
@@ -599,7 +586,7 @@
         "        \"resolution\": resolution,\n",
         "        \"shuffle_caption\": shuffle_caption and not cache_text_encoder_outputs,\n",
         "        \"keep_tokens\": keep_tokens,\n",
-        "        \"flip_aug\": flip_aug,\n",
+        "        \"flip_aug\": False,\n",
         "        \"caption_extension\": caption_extension,\n",
         "        \"enable_bucket\": True,\n",
         "        \"bucket_no_upscale\": False,\n",
@@ -1243,8 +1230,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "provenance": [],
-      "include_colab_link": true
+      "include_colab_link": true,
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
