--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -378,7 +378,7 @@
         "    installed = True\n",
         "\n",
         "  #Uv package manager add-on ZeroProtecPlus\n",
-        "  !git clone -b testing https://github.com/ZeroProtecPlus/LoRA_Easy_Training_scripts_Backend {trainer_dir}\n",
+        "  !git clone -b dev https://github.com/ZeroProtecPlus/LoRA_Easy_Training_scripts_Backend {trainer_dir}\n",
         "  os.chdir(trainer_dir)\n",
         "  #!git reset --hard {COMMIT}\n",
         "\n",
