Change default settings

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Fix_Lora_Trainer_XL.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -169,12 +169,6 @@
         "    model_url = \"https://huggingface.co/stabilityai/stable-diffusion-xl-base-1.0/resolve/main/sd_xl_base_1.0.safetensors\"\n",
         "\n",
         "  if load_diffusers:\n",
-        "    model_url = \"https://huggingface.co/stablediffusionapi/pony-realism\"\n",
-        "  else:\n",
-        "    model_url = \"https://huggingface.co/LyliaEngine/ponyRealism_v21MainVAE/resolve/main/ponyRealism_v21MainVAE.safetensors\"\n",
-        "  model_file = \"/content/ponyrealism.safetensors\"\n",
-        "  vpred = True\n",
-        "  if load_diffusers:\n",
         "    model_url = \"https://huggingface.co/Laxhar/noobai-XL-Vpred-0.75\"\n",
         "  else:\n",
         "    model_url = \"https://huggingface.co/Laxhar/noobai-XL-Vpred-0.75/resolve/main/NoobAI-XL-Vpred-v0.75.safetensors\"\n",
@@ -196,7 +190,7 @@
         "\n",
         "#@markdown ### ▶️ Processing\n",
         "#@markdown Por defecto la resolución para personajes es 1024. otras resoluciones que puedes usar son 896 (recomendado para personajes o 1024) y 768 (recomendado para estilos, puedes usar más repeticiones con esta resolución).\n",
-        "resolution = 768 #@param {type:\"dropdown\", min:768, max:1536, step:128}\n",
+        "resolution = 1024 #@param {type:\"dropdown\", min:768, max:1536, step:128}\n",
         "#@markdown Activa `Flip Aug`si tu dataset es pequeño, util en personajes isometricos, volteara todas tus imagenes (modo espejo) para aprender el doble, pero podria afectar a personajes con tatuajes, marcas, cicatrices etc...\n",
         "flip_aug = False #@param {type:\"boolean\"}\n",
         "caption_extension = \".txt\" # @param [\".txt\",\".caption\"]\n",
@@ -226,8 +220,8 @@
         "#@markdown ### ▶️ Learning\n",
         "#@markdown La tasa de aprendizaje es lo más importante para tus resultados. Si quieres entrenar más lento con muchas imágenes, o si tu dim y alfa son altos, mueve el unet a 2e-4 o menos.  <p>\n",
         "#@markdown El codificador de texto ayuda al Lora a aprender conceptos un poco mejor.  Se recomienda hacerlo la mitad o una quinta parte del unet.  Si estás entrenando un estilo, puedes incluso configurarlo en 0.\n",
-        "unet_lr = 2e-5 #@param {type:\"number\"}\n",
-        "text_encoder_lr = 0 #@param {type:\"number\"}\n",
+        "unet_lr = 3e-05 #@param {type:\"number\"}\n",
+        "text_encoder_lr = 1e-06 #@param {type:\"number\"}\n",
         "#@markdown El scheduler es el algoritmo que guía la tasa de aprendizaje. Si no está seguro, elije \"constant\" e ignore el número. Personalmente recomiendo `cosine_with_restarts` con 3 reinicios.\n",
         "lr_scheduler = \"rex\" # @param [\"constant\",\"cosine\",\"cosine_with_restarts\",\"constant_with_warmup\",\"linear\",\"polynomial\",\"rex\"]\n",
         "lr_scheduler_number = 1 #@param {type:\"number\"}\n",
@@ -304,7 +298,7 @@
         "#@markdown Si selecciona Prodigy o Dadapt recomiendo usar `mixed fp16`para mejores resultados. <p>\n",
         "recommended_values = True #@param {type:\"boolean\"}\n",
         "#@markdown Alternativamente, establezca sus propios argumentos de optimizador separados por espacios (no comas). `recommended_values` debe estar deshabilitado.\n",
-        "optimizer_args = \"weight_decay=0.04\" #@param {type:\"string\"}\n",
+        "optimizer_args = \"\" #@param {type:\"string\"}\n",
         "optimizer_args = [a.strip() for a in optimizer_args.split(' ') if a]\n",
         "\n",
         "\n",
@@ -1230,8 +1224,8 @@
     "accelerator": "GPU",
     "colab": {
       "gpuType": "T4",
-      "include_colab_link": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
