change venv from ubuntu to venv from uv

--- a/Dataset_Maker_By_WhiteZ.ipynb
+++ b/Dataset_Maker_By_WhiteZ.ipynb
@@ -137,24 +137,23 @@
         "import os\n",
         "\n",
         "kohya_dir = \"/content/kohya\"\n",
-        "venv_python = os.path.join(kohya_dir, \"venv/bin/python\")\n",
-        "# venv_pip = os.path.join(kohya_dir, \"venv/bin/pip\") # Ya no es necesario para las instalaciones con uv\n",
+        "venv_python = os.path.join(kohya_dir, \".venv/bin/python\")\n",
+        "# venv_pip = os.path.join(kohya_dir, \"venv/bin/pip\")\n",
         "\n",
         "if \"step4_installed_flag\" not in globals():\n",
         "  print(\"starting ⭐\")\n",
         "#install uv\n",
         "  !curl -LsSf https://astral.sh/uv/install.sh | sh\n",
         "\n",
-        "  !apt install -y python3.10-venv -qq\n",
         "  !git clone https://github.com/kohya-ss/sd-scripts {kohya_dir}\n",
         "  os.chdir(kohya_dir)\n",
         "  !git reset --hard e89653975ddf429cdf0c0fd268da0a5a3e8dba1f\n",
         "\n",
         "  print(\"\\ncreating a virtual environment...\\n\")\n",
-        "  !python3.10 -m venv venv\n",
+        "  !uv venv\n",
         "  print(\"successfully created virtual environment\")\n",
         "\n",
-        "  print(\"\\n🏭 Installing dependencies...\\n\")\n",
+        "  print(\"\\n🏭 Installing dependencies with uv...\\n\")\n",
         "  !uv pip install --python {venv_python} \\\n",
         "    -r requirements.txt --no-progress \\\n",
         "    fairscale==0.4.13 \\\n",
@@ -162,7 +161,7 @@
         "    onnx \\\n",
         "    onnxruntime-gpu==1.20.1 -f https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/\n",
         "\n",
-        " # installing rich using uv...\n",
+        "  # installing rich using uv...\n",
         "  !uv pip uninstall --python {venv_python} rich\n",
         "\n",
         "  step4_installed_flag = True\n",
