fix shuffle tags

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -195,7 +195,7 @@
         "flip_aug = False #@param {type:\"boolean\"}\n",
         "caption_extension = \".txt\" # @param [\".txt\",\".caption\"]\n",
         "#@markdown Mezcla etiquetas de anime, mejora el aprendizaje y las indicaciones.  Una etiqueta de activación va al comienzo de cada archivo de texto y no se mezclará.<p>\n",
-        "shuffle_tags = False #@param {type:\"boolean\"}\n",
+        "shuffle_tags = True #@param {type:\"boolean\"}\n",
         "shuffle_caption = shuffle_tags\n",
         "activation_tags = \"1\" #@param [0,1,2,3]\n",
         "keep_tokens = int(activation_tags)\n",
