--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -202,16 +202,16 @@
         "\n",
         "#@markdown ### ▶️ Steps <p>\n",
         "#@markdown Tus imágenes se repetirán esta cantidad de veces durante el entrenamiento. Te recomiendo que tus imágenes multiplicadas por sus repeticiones esté entre 200 y 400.\n",
-        "num_repeats = 1 #@param {type:\"number\"}\n",
+        "num_repeats = 2 #@param {type:\"number\"}\n",
         "#@markdown Elige cuánto tiempo quieres entrenar.  Un buen punto de partida es alrededor de 10 épocas o alrededor de 2000 pasos.<p>\n",
         "#@markdown Una época es una cantidad de pasos igual a: la cantidad de imágenes multiplicada por sus repeticiones, dividida por el tamaño del lote. <p>\n",
         "preferred_unit = \"Epochs\" #@param [\"Epochs\", \"Steps\"]\n",
-        "how_many = 15 #@param {type:\"number\"}\n",
+        "how_many = 10 #@param {type:\"number\"}\n",
         "max_train_epochs = how_many if preferred_unit == \"Epochs\" else None\n",
         "max_train_steps = how_many if preferred_unit == \"Steps\" else None\n",
         "#@markdown Guardar más épocas te permitirá comparar mejor el progreso de tu Lora.\n",
         "save_every_n_epochs = 1 #@param {type:\"number\"}\n",
-        "keep_only_last_n_epochs = 5 #@param {type:\"number\"}\n",
+        "keep_only_last_n_epochs = 10 #@param {type:\"number\"}\n",
         "if not save_every_n_epochs:\n",
         "  save_every_n_epochs = max_train_epochs\n",
         "if not keep_only_last_n_epochs:\n",
@@ -220,21 +220,21 @@
         "#@markdown ### ▶️ Learning\n",
         "#@markdown La tasa de aprendizaje es lo más importante para tus resultados. Si quieres entrenar más lento con muchas imágenes, o si tu dim y alfa son altos, mueve el unet a 2e-4 o menos.  <p>\n",
         "#@markdown El codificador de texto ayuda al Lora a aprender conceptos un poco mejor.  Se recomienda hacerlo la mitad o una quinta parte del unet.  Si estás entrenando un estilo, puedes incluso configurarlo en 0.\n",
-        "unet_lr = 6e-05 #@param {type:\"number\"}\n",
-        "text_encoder_lr = 1e-06 #@param {type:\"number\"}\n",
+        "unet_lr = 3e-4 #@param {type:\"number\"}\n",
+        "text_encoder_lr = 6e-5 #@param {type:\"number\"}\n",
         "#@markdown El scheduler es el algoritmo que guía la tasa de aprendizaje. Si no está seguro, elije \"constant\" e ignore el número. Personalmente recomiendo `cosine_with_restarts` con 3 reinicios.\n",
-        "lr_scheduler = \"rex\" # @param [\"constant\",\"cosine\",\"cosine_with_restarts\",\"constant_with_warmup\",\"linear\",\"polynomial\",\"rex\"]\n",
-        "lr_scheduler_number = 1 #@param {type:\"number\"}\n",
+        "lr_scheduler = \"constant_with_warmup\" # @param [\"constant\",\"cosine\",\"cosine_with_restarts\",\"constant_with_warmup\",\"linear\",\"polynomial\",\"rex\"]\n",
+        "lr_scheduler_number = 0 #@param {type:\"number\"}\n",
         "#@markdown Pasos dedicados a \"calentar\" la tasa de aprendizaje durante la capacitación para lograr eficiencia. Recomiendo dejarlo al 5%.\n",
         "lr_warmup_ratio = 0.05 #@param {type:\"slider\", min:0.0, max:0.2, step:0.01}\n",
-        "lr_warmup_steps = 0 #@param {type:\"number\"}\n",
+        "lr_warmup_steps = 100 #@param {type:\"number\"}\n",
         "#@markdown Estas configuraciones pueden producir mejores resultados.`min_snr_gamma` ajusta la pérdida con el tiempo. `ip_noise_gamma` ajusta el ruido aleatorio.\n",
         "min_snr_gamma_enabled = True #@param {type:\"boolean\"}\n",
         "min_snr_gamma = 8.0 #@param {type:\"slider\", min:4, max:16.0, step:0.5}\n",
         "ip_noise_gamma_enabled = True #@param {type:\"boolean\"}\n",
         "ip_noise_gamma = 0.05 #@param {type:\"slider\", min:0.05, max:0.1, step:0.01}\n",
         "#@markdown Multinoise puede ayudar con el equilibrio del color (negros más oscuros, blancos más claros) no es necesario activarlo si entrenas Lora Vpred.\n",
-        "multinoise = True #@param {type:\"boolean\"}\n",
+        "multinoise = False #@param {type:\"boolean\"}\n",
         "\n",
         "#@markdown ### ▶️ Structure\n",
         "#@markdown LoRA es del tipo clásico y bueno para una variedad de propósitos. LoCon es bueno con los estilos artísticos (también funciona con personajes) ya que tiene más capas para aprender más aspectos del conjunto de datos.\n",
@@ -288,7 +288,7 @@
         "\n",
         "#@markdown ### ▶️ Advanced\n",
         "#@markdown El optimizador es el algoritmo utilizado para el entrenamiento. Adafactor es el predeterminado y funciona muy bien, mientras que el Prodigy administra la tasa de aprendizaje automáticamente y puede tener varias ventajas, como entrenar más rápido, debido a que necesita menos pasos y funcionan mejor para datasets pequeños.\n",
-        "optimizer = \"Came\" #@param [\"AdamW8bit\", \"Prodigy\", \"DAdaptation\", \"DadaptAdam\", \"DadaptLion\", \"AdamW\", \"Lion\", \"SGDNesterov\", \"SGDNesterov8bit\", \"AdaFactor\", \"Came\"]\n",
+        "optimizer = \"AdaFactor\" #@param [\"AdamW8bit\", \"Prodigy\", \"DAdaptation\", \"DadaptAdam\", \"DadaptLion\", \"AdamW\", \"Lion\", \"SGDNesterov\", \"SGDNesterov8bit\", \"AdaFactor\", \"Came\"]\n",
         "#@markdown Argumentos recomendados para Adafactor: `scale_parameter=False relative_step=False warmup_init=False` <p>\n",
         "#@markdown Argumentos recomendados para AdamW8bit: `weight_decay=0.1 betas=[0.9,0.99]`<p>\n",
         "#@markdown Argumentos recomendados para Prodigy: `decouple=True weight_decay=0.01 betas=[0.9,0.999] d_coef=2 use_bias_correction=True safeguard_warmup=True`<p>\n",
