Add forced diffuser model and lower the log output in the console.

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -61,7 +61,8 @@
         "from time import time\n",
         "import time\n",
         "from IPython.display import Markdown, display, HTML, clear_output\n",
-        "\n",
+        "from huggingface_hub.utils import disable_progress_bars\n",
+        "import logging\n",
         "\n",
         "#auto off\n",
         "#@markdown ### 💤 Auto Off\n",
@@ -111,14 +112,18 @@
         "#@markdown Decida el modelo que se descargará y utilizará para el entrenamiento. También puedes elegir tu propio modelo pegando su enlace de descarga o un archivo en tu Google Drive que comience con `/content/drive/MyDrive`.\n",
         "training_model = \"Illustrious_2.0\" # @param [\"Pony Diffusion V6 XL\",\"Animagine XL V3\",\"animagine_4.0_zero\",\"Illustrious_0.1\",\"Illustrious_2.0\",\"NoobAI-XL0.75\",\"NoobAI-XL0.5\",\"Stable Diffusion XL 1.0 base\",\"NoobAI-XL-Vpred-v0.75\",\"noobai-xl-vpred-v0.5\"]\n",
         "optional_custom_training_model = \"\" #@param {type:\"string\"}\n",
-        "#@markdown Marca esta opción si deseas entrenar con un modelo en formarto diffusers o el modelo custom esta en dicho formato\n",
+        "#@markdown Esto forzara el uso del modelo en formato diffusers, puede ser util en ciertos casos. <p>\n",
+        "#@markdown Manten esto desmarcado para usar un modelo ckpt (.safetensors) para el entrenamiento.\n",
+        "force_load_diffusers = False # @param {\"type\":\"boolean\"}\n",
+        "#@markdown Marca está opción si el modelo custom esta en dicho formato\n",
         "custom_model_is_diffusers = False #@param {type:\"boolean\"}\n",
         "#@markdown Marca esta opción si tu modelo soporta vpred de lo contrario dejala desmarcada.\n",
         "custom_model_is_vpred = False #@param {type:\"boolean\"}\n",
         "#@markdown Utilice wandb si desea visualizar el progreso de su entrenamiento a lo largo del tiempo.\n",
         "wandb_key = \"\" #@param {type:\"string\"}\n",
         "\n",
-        "load_diffusers = custom_model_is_diffusers and len(optional_custom_training_model) > 0\n",
+        "load_diffusers = (custom_model_is_diffusers and len(optional_custom_training_model) > 0) \\\n",
+        "                 or force_load_diffusers\n",
         "vpred = custom_model_is_vpred and len(optional_custom_training_model) > 0\n",
         "\n",
         "if optional_custom_training_model:\n",
@@ -641,6 +646,15 @@
         "\n",
         "  else:\n",
         "    # Downloadable model\n",
+        "\n",
+        "    # log minimo\n",
+        "    logging.getLogger(\"huggingface_hub\").setLevel(logging.ERROR)\n",
+        "    logging.getLogger(\"fsspec\").setLevel(logging.ERROR)\n",
+        "\n",
+        "#Desactiva las barras de progreso\n",
+        "    os.environ[\"HF_HUB_DISABLE_PROGRESS_BARS\"] = \"1\"\n",
+        "    disable_progress_bars()\n",
+        "\n",
         "    if load_diffusers:\n",
         "      if 'huggingface.co' in real_model_url:\n",
         "          match = re.search(r'huggingface\\.co/([^/]+)/([^/]+)', real_model_url)\n",
