--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -110,7 +110,7 @@
         "#@markdown La estructura de carpetas no importa y es puramente por comodidad. Asegúrate de elegir siempre el mismo.  Me gusta organizar por proyecto.\n",
         "folder_structure = \"Organize by project (MyDrive/Loras/project_name/dataset)\" #@param [\"Organize by category (MyDrive/lora_training/datasets/project_name)\", \"Organize by project (MyDrive/Loras/project_name/dataset)\"]\n",
         "#@markdown Decida el modelo que se descargará y utilizará para el entrenamiento. También puedes elegir tu propio modelo pegando su enlace de descarga o un archivo en tu Google Drive que comience con `/content/drive/MyDrive`.\n",
-        "training_model = \"Illustrious_2.0\" # @param [\"Pony Diffusion V6 XL\",\"Animagine XL V3\",\"animagine_4.0_zero\",\"Illustrious_0.1\",\"Illustrious_2.0\",\"NoobAI-XL0.75\",\"NoobAI-XL0.5\",\"Stable Diffusion XL 1.0 base\",\"NoobAI-XL-Vpred-v0.75\",\"noobai-xl-vpred-v0.5\"]\n",
+        "training_model = \"Illustrious_2.0\" # @param [\"Pony Diffusion V6 XL\",\"Animagine XL V3\",\"animagine_4.0_zero\",\"Illustrious_0.1\",\"Illustrious_2.0\",\"NoobAI-XL0.75\",\"NoobAI-XL0.5\",\"Stable Diffusion XL 1.0 base\",\"NoobAIXL0_75vpred\",\"NoobAIXL_05vpred\"]\n",
         "optional_custom_training_model = \"\" #@param {type:\"string\"}\n",
         "#@markdown Esto forzara el uso del modelo en formato diffusers, puede ser util en ciertos casos. <p>\n",
         "#@markdown Manten esto desmarcado para usar un modelo ckpt (.safetensors) para el entrenamiento.\n",
@@ -167,18 +167,20 @@
         "    model_url = \"https://huggingface.co/Laxhar/noobai-XL-0.5\"\n",
         "  else:\n",
         "    model_url = \"https://huggingface.co/Laxhar/noobai-XL-0.5/resolve/main/NoobAI-XL-v0.5.safetensors\"\n",
-        "else:\n",
+        "elif \"Stable Diffusion XL 1.0 base\" in training_model:\n",
         "  if load_diffusers:\n",
         "    model_url = \"https://huggingface.co/stabilityai/stable-diffusion-xl-base-1.0/\"\n",
         "  else:\n",
         "    model_url = \"https://huggingface.co/stabilityai/stable-diffusion-xl-base-1.0/resolve/main/sd_xl_base_1.0.safetensors\"\n",
-        "\n",
+        "elif \"NoobAIXL0_75vpred\" in training_model:\n",
+        "  vpred = True\n",
         "  if load_diffusers:\n",
         "    model_url = \"https://huggingface.co/Laxhar/noobai-XL-Vpred-0.75\"\n",
         "  else:\n",
         "    model_url = \"https://huggingface.co/Laxhar/noobai-XL-Vpred-0.75/resolve/main/NoobAI-XL-Vpred-v0.75.safetensors\"\n",
         "  model_file = \"/content/NoobAI-XL-Vpred-v0.75.safetensors\"\n",
-        "\n",
+        "else:\n",
+        "  vpred = True\n",
         "  if load_diffusers:\n",
         "    model_url = \"https://huggingface.co/WhiteAiZ/noobai-xl-vpred-v0.5_diffusers\"\n",
         "  else:\n",
